--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design">
+    <meta name="keywords" content="agence design lyon, agence design, web design">
     <meta name="description" content="La chouette agence est une agence de web design, basé à lyon, qui aide les entreprises à devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robot" content="index, follow">
@@ -37,7 +37,7 @@
 <body>
 <!-- Principal conteneur -->
 <div class="page-container">
-    
+<header>
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
@@ -61,9 +61,11 @@
 		</nav>
 	</div>
 </div>
+</header>
+<main>
 <!-- bloc-0 END -->
 
-<!-- bloc-6 -->
+<section>
 <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 	<div class="container bloc-lg">
 		<div class="row">
@@ -79,9 +81,6 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-6 END -->
-
-<!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
@@ -123,14 +122,13 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-7 END -->
+</section>
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 
-
-<!-- Footer - bloc-8 -->
+<footer>
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
@@ -164,11 +162,8 @@
 		</div>
 	</div>
 </div>
-<!-- Footer - bloc-8 END -->
-
+</footer>
+</main>
 </div>
-<!-- Principal conteneur END -->
-    
-
 </body>
 </html>
