--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design">
+    <meta name="keywords" content="agence design lyon, agence design, web design">
     <meta name="description" content="La chouette agence est une agence de web design, basé à lyon, qui aide les entreprises à devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robot" content="index, follow">
@@ -37,10 +37,8 @@
     
 </head>
 <body>
-<!-- Principal conteneur -->
 <div class="page-container">
-    
-<!-- bloc-0 -->
+<header>
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 
@@ -53,7 +51,7 @@
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav fo">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
@@ -67,9 +65,9 @@
 		</nav>
 	</div>
 </div>
-<!-- bloc-0 END -->
-
-<!-- bloc-1-presentation -->
+</header>
+<main>
+<section>
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
@@ -85,9 +83,8 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-1-presentation END -->
-
-<!-- bloc-2-services -->
+</section>
+<section>
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
@@ -139,16 +136,13 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-2-services END -->
-
-<!-- bloc-3-what-i-do -->
 <div class="bloc bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture  b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
-				<h2 class="mg-md text-center">
+				<p class="mg-md text-center strong">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
-				</h2>
+				</p>
 				<p class="text-center">
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="bold-link" href="contact.html">Contactez notre équipe</a><br>
 				</p>
@@ -156,9 +150,8 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-3-what-i-do END -->
-
-<!-- bloc-4-portfolio -->
+</section>
+<section>
 <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
@@ -208,9 +201,9 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-4-portfolio END -->
+</section>
 
-<!-- bloc-5-cta -->
+<section>
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
@@ -223,9 +216,9 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-5-cta END -->
-
-<!-- Footer - bloc-8 -->
+</section>
+</main>
+<footer>
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
@@ -259,9 +252,7 @@
 		</div>
 	</div>
 </div>
-<!-- Footer - bloc-8 END -->
-
+</footer>
 </div>
-<!-- Principal conteneur END -->
 </body>
 </html>
